fix(stage): adjust colors, spacing and sizes

--- a/packages/components/src/components/bal-stage/bal-stage.sass
+++ b/packages/components/src/components/bal-stage/bal-stage.sass
@@ -31,13 +31,13 @@
       display: flex
       flex-direction: column
       justify-content: center
-      padding-top: var(--bal-space-xxxx-large)
+      padding-top: calc(var(--bal-space-xxxx-large) + 4rem)
       padding-bottom: var(--bal-space-xx-large)
       +tablet
-        padding-top: var(--bal-space-tablet-xxxx-large)
+        padding-top: calc(var(--bal-space-tablet-xxxx-large) + 4rem)
         padding-bottom: var(--bal-space-tablet-xx-large)
       +desktop
-        padding-top: var(--bal-space-desktop-xxxx-large)
+        padding-top: calc(var(--bal-space-desktop-xxxx-large) + 3rem)
         padding-bottom: var(--bal-space-desktop-xx-large)
 
     +block(stage-back-link)
